# ccf-gpui-widgets

./: .gitignore  CLAUDE.md  Cargo.toml  GPUI-LAYOUT-PATTERNS.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  TODO.md
.github/workflows/: ci.yml
doc/: TAB_STOP_SOLUTIONS.md
docs/: COLOR_PICKER.md  MOUSE_CAPTURE.md
examples/: widget_gallery.rs
src/: lib.rs  theme.rs
src/utils/: color.rs  mod.rs  path.rs
src/widgets/: button.rs  checkbox.rs  checkbox_group.rs  collapsible.rs  color_swatch.rs  confirmation_dialog.rs  cursor_blink.rs  directory_picker.rs  dropdown.rs  editing_core.rs  file_picker.rs  focus_navigation.rs  mod.rs  number_stepper.rs  password_input.rs  path_display.rs  progress_bar.rs  radio_group.rs  repeatable_directory_picker.rs  repeatable_file_picker.rs  repeatable_text_input.rs  scrollable.rs  scrollbar.rs  segmented_control.rs  selection.rs  sensitive_string.rs  sidebar_nav.rs  slider.rs  spinner.rs  tab_bar.rs  text_input.rs  toggle_switch.rs  tooltip.rs
