[package]
name = "ccf-gpui-widgets"
version = "0.1.0"
edition = "2021"
description = "Reusable GPUI widgets for building desktop applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ComposerChrisF/ccf-gpui-widgets"
keywords = ["gpui", "widgets", "ui", "gui"]
categories = ["gui"]

[dependencies]
gpui = "0.2.2"
smol = "2.0"
log = "0.4"

[dependencies.rfd]
version = "0.15"
optional = true

[dependencies.dirs]
version = "5.0"
optional = true

[dependencies.secrecy]
version = "0.10"
optional = true

[dependencies.zeroize]
version = "1.8"
optional = true

[features]
default = []
file-picker = ["dep:rfd", "dep:dirs"]
secure-password = ["dep:secrecy", "dep:zeroize"]
full = ["file-picker", "secure-password"]

[dev-dependencies]
tempfile = "3.10"
proptest = "1.4"

[[example]]
name = "widget_gallery"
path = "examples/widget_gallery.rs"

[package.metadata.docs.rs]
all-features = true
